# TestTask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_example.sh
DjangoStripeAPI/: manage.py
DjangoStripeAPI/DjangoStripeAPI/: asgi.py  settings.py  urls.py  wsgi.py
django_stripe_api/: manage.py
django_stripe_api/api/: urls.py  views.py
django_stripe_api/django_stripe_api/: asgi.py  settings.py  urls.py
django_stripe_api/home/: urls.py  views.py
django_stripe_api/home/templates/home/: index.html
django_stripe_api/item/: admin.py  apps.py  models.py  session.py  urls.py  views.py
django_stripe_api/item/templates/item/: home.html  index.html  item_list.html
django_stripe_api/main/: get_api.py  urls.py
django_stripe_api/main/migrations/: 0001_initial.py
django_stripe_api/main/templates/main/: index.html
django_stripe_api/order/: models.py  order.py  urls.py  views.py
django_stripe_api/templates/: base.html
src/api/: urls.py  views.py
src/config/: settings.py  urls.py
src/django_stripe_api/: settings.py  wsgi.py
src/item/: admin.py  urls.py  views.py
src/item/templates/item/: index.html
src/order/: admin.py  models.py  order.py  urls.py  views.py
src/order/services/: order.py  stripe.py
src/services/: stripe.py
src/stripe_logic/: stripe_logic.py
